test/sema/uknown_type_var.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:12: error: cannot resolve type 'userDefinedType'
    let x: userDefinedType = 1;
}
// CHECK-NOT: {{.*}}
